pelican/importer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: data-importer
  namespace: pelican
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /target   # ← Doit être exactement /target
      name: pelican-data
  volumes:
  - name: pelican-data
    persistentVolumeClaim:
      claimName: pelican-data-pvc
