pelican/routes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelican-tunnel
  namespace: pelican
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: panel.axtazer.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pelican-panel-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wings-tunnel
  namespace: wings
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: node01.axtazer.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wings-svc
                port:
                  number: 8443
